# FTEC5660

./: README.md
homeworks/hw1/: notebook.ipynb
homeworks/hw2/part1/: homework2_part1.ipynb
homeworks/hw2/part2/: homework2_part2.ipynb
projects/group/: .gitignore  README.md  justfile  ppt.md
projects/group/streamlit_app/: .env.example  app.py  pyproject.toml  requirements.txt
projects/group/streamlit_app/bank_mcp/: db.py
projects/group/streamlit_app/guardian/: __init__.py  paths.py  state.py
projects/group/streamlit_app/guardian/agents/: bank_account.py  context_agent.py  intervention_agent.py  risk_agent.py  risk_langchain_agent.py  user_settings.py
projects/group/streamlit_app/guardian/core/: theme.py
projects/group/streamlit_app/guardian/data/: event_log.py  scam_db.py  scam_signals.py
projects/group/streamlit_app/guardian/llm/: heuristic.py  ollama.py  prompts.py  runtime.py  tools.py
projects/group/streamlit_app/guardian/rag/: README.md  __init__.py  build_index.py  chunking.py  config.py  embeddings.py  loader.py  retriever.py  tools.py  vector_store.py
projects/group/streamlit_app/guardian/scenarios/: engine.py  events.py
projects/group/streamlit_app/guardian/ui/: activity.py  audit.py  bank.py  chat.py  home.py  intervention.py  live_trace.py  messages.py  settings.py  widgets.py
projects/group/streamlit_app/mcp_server/: server.py
projects/group/streamlit_app/pages/: 1_🏠_Home.py  2_🏦_Bank.py  3_📨_Messages.py  4_💬_Chat.py  5_🛡️_Audit.py  6_⚙️_Settings.py
projects/group/streamlit_app/tests/: test_rag.py  test_risk_agent.py  test_scenario_engine.py
projects/group/streamlit_app/tools/: eval.py  test_rag_search.py
projects/individual/: List of Potential Agentic Projects for Replication.xlsx
(+85 files in other folders)
