[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "guardian"
version = "0.1.0"
description = "Guardian — anti-scam decision security agent (Streamlit port)"
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.36",
  "streamlit-autorefresh>=1.0.1",
  "langchain>=1.0",
  "langchain-openai>=1.0",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["guardian*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
